--- a/style/style.css
+++ b/style/style.css
@@ -1,24 +1,3 @@
-
-.slider{
-    width: 320px;
-    height: 350px;
-    border: 1px solid black;
-    position: relative;
-    overflow: hidden;
-    margin-bottom: 30px;
-}
-.sliders{
-    display: flex;
-    padding-top: 15px;
-    transition: transform 0.5s ease;
-}
-.sliders img{
-    width: 300px;
-    height: 250px;
-    object-fit: cover;
-    flex-shrink: 0;
-    padding: 10px;
-}
 .next{
     left: 140px;
 }
@@ -31,4 +10,21 @@
     transform: translateY(-50%);
     cursor: pointer;
     z-index: 100;
-  }
+}
+.slider{
+    position: relative;
+    margin: auto;
+    overflow: hidden;
+    padding: 40px 0;
+}
+.sliders img{
+    width: 300px;
+    height: 250px;
+    object-fit: cover;
+    flex-shrink: 0;
+    padding: 10px;
+    display: none;
+}
+img.displaySlide{
+    display: block;
+}
